test/shouldnt-compile/implicit-int-conv.cpp
#include "common.hpp"


void f(int) {}


void check() {
  Enums es;
  f(es);
}
